crates/datarig-tui/tests/snapshots/ui_snapshots__current_statement_is_marked_in_the_gutter.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: t.backend()
---
"╭ Explorer ─────────────╮ 1 console 1 ×                                                             "
"│  ＋ New connection    │╭ Query · console 1 ──────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg         ││ local-pg / datarig  127.0.0.1:55432 · policy: default                   │"
"│  ▾ datarig default    ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor            │" Hidden by multi-width symbols: [(42, " ")]
"│    ▸ analytics        ││  2 SELECT * FROM shop.users WHERE id <= 8;                              │"
"│    ▸ public           ││  3                                                                      │"
"│    ▸ shop             ││  4▎SELECT u.name, o.status, o.total_amount                              │"
"│                       ││  5▎FROM shop.orders o                                                   │"
"│                       ││  6▎JOIN shop.users u ON u.id = o.user_id                                │"
"│                       ││  7▎WHERE o.status = 'paid';                                             │"
"│                       ││  8                                                                      │"
"│                       ││  9 SELECT * FROM analytics.events;                                      │"
"│                       ││ 10                                                                      │"
"│                       ││ 11 SELECT * FROM analytics.events ORDER BY created_at DESC;             │"
"│                       ││ 12                                                                      │"
"│                       ││ 13 SELECT analytics.slow(30);                                           │"
"│                       ││ 14                                                                      │"
"│                       ││ 15 SELECT $$a body; with a semicolon$$ AS dollar, 'it''s; fine' AS quote│"
"│                       ││ 16                                                                      │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"╰───────────────────────╯╰─────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                │ i type · Ctrl+E run EN "
