crates/datarig-tui/tests/snapshots/ui_snapshots__explorer_error_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮╭ Workspace ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  ＋ New connection                   ││                                                                                                                      │" Hidden by multi-width symbols: [(4, " ")]
"│▸ ✕   local-pg                        ││  No open tabs                                                                                                        │"
"│    Connection failed: the connection…││  Pick a connection in the explorer, or press Ctrl+O.                                                                 │"
"│▸ ○   v6                              ││                                                                                                                      │"
"│▸ ○   分析-replica                    ││  Enter      Connect and open a console                                                                               │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│                                      ││  Ctrl+O     Quick connect                                                                                            │"
"│                                      ││  Ctrl+T     New console tab                                                                                          │"
"│                                      ││  Space t u  Reopen a closed tab                                                                                      │"
"│                                      ││  n          New connection                                                                                           │"
"│                                      ││  F1         Keyboard help                                                                                            │"
"│                                      ││  :          Commands                                                                                                 │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" Connection failed: the connection was refused (is the server running?)                            │ Enter open · : commands · F1 help · q quit · Space more EN "
