crates/datarig-tui/tests/snapshots/ui_snapshots__explorer_filtered_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: t.backend()
---
"╭ Explorer ────────────╮╭ Workspace ───────────────────────────────────────────╮"
"│/ v6                  ││                                                      │"
"│  ＋ New connection   ││  No open tabs                                        │" Hidden by multi-width symbols: [(4, " ")]
"│▸ ○   v6              ││  Pick a connection in the explorer, or press         │"
"│                      ││  Ctrl+O.                                             │"
"│                      ││                                                      │"
"│                      ││  Enter      Connect and open a console               │"
"│                      ││  Ctrl+O     Quick connect                            │"
"│                      ││  Ctrl+T     New console tab                          │"
"│                      ││  Space t u  Reopen a closed tab                      │"
"│                      ││  n          New connection                           │"
"│                      ││  F1         Keyboard help                            │"
"│                      ││  :          Commands                                 │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
"                                                    │ Enter done · Esc clear EN "
