crates/datarig-tui/tests/snapshots/ui_snapshots__explorer_states_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ local                               ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▸ ○   scratch                       ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│▾ work                                ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│  ▾ prod                              ││  3                                                                                                                   │"
"│    ▸ ⠋   orders-prod                 ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│    ▸ ✕   分析-replica                ││  5 FROM shop.orders o                                                                                                │" Hidden by multi-width symbols: [(12, " "), (14, " ")]
"│        Connection failed: password a…││  6 JOIN shop.users u ON u.id = o.user_id                                                                             │"
"│  ▸ ○   orders-stage                  ││  7 WHERE o.status = 'paid';                                                                                          │"
"│▾ ●   local-pg                        ││  8                                                                                                                   │"
"│  ▾ datarig default                   ││  9 SELECT * FROM analytics.events;                                                                                   │"
"│    ▸ analytics                       ││ 10                                                                                                                   │"
"│    ▸ public                          ││ 11 SELECT * FROM analytics.events ORDER BY created_at DESC;                                                          │"
"│    ▸ shop                            ││ 12                                                                                                                   │"
"│                                      ││ 13 SELECT analytics.slow(30);                                                                                        │"
"│                                      ││ 14                                                                                                                   │"
"│                                      ││ 15 SELECT $$a body; with a semicolon$$ AS dollar, 'it''s; fine' AS quoted;                                           │"
"│                                      ││ 16                                                                                                                   │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connection failed: password authentication failed for user "report"          │ Enter open · Tab next pane · : commands EN "
